--- a/gdprtestproject.client/src/app/Component/login/login.component.html
+++ b/gdprtestproject.client/src/app/Component/login/login.component.html
@@ -18,11 +18,12 @@
         I consent to the processing of my personal data in accordance with the <a href="/privacy-policy" target="_blank">Privacy Policy</a> and <a href="/terms-of-service" target="_blank">Terms of Service</a>.
       </label>
     </div>
-     
+
     <button type="submit" [disabled]="!LoginRequest.IsConsent">Login</button>
+    <p class="signup">
+      Don't have an account?
+      <a [routerLink]="['/signup']">Sign up here</a>
+    </p>
   </form>
 
-  <p class="privacy-note">
-    By logging in, you agree to our <a href="/privacy-policy" target="_blank">Privacy Policy</a> and <a href="/terms-of-service" target="_blank">Terms of Service</a>.
-  </p>
 </div>
