--- a/gdprtestproject.client/src/app/Component/signup/signup.component.css
+++ b/gdprtestproject.client/src/app/Component/signup/signup.component.css
@@ -7,6 +7,10 @@
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
 }
 
+.signup {
+  text-align: center;
+}
+
 h2 {
   text-align: center;
   margin-bottom: 20px;
