--- a/gdprtestproject.client/src/app/Component/login/login.component.css
+++ b/gdprtestproject.client/src/app/Component/login/login.component.css
@@ -34,6 +34,10 @@ input[type="password"] {
   border-radius: 5px;
 }
 
+.clr-red{
+    color:red;
+}
+
 .gdpr-consent {
   display: flex;
   align-items: center;
