--- a/gdprtestproject.client/src/app/Component/user/user.component.css
+++ b/gdprtestproject.client/src/app/Component/user/user.component.css
@@ -1,3 +1,35 @@
+.profile-container {
+  max-width: 400px;
+  margin: 50px auto;
+  padding-top:20px;
+  padding: 40px;
+  border-radius: 10px;
+  background-color: #f4f4f4;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+}
+
+
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+  width: 100%;
+  padding: 10px;
+  margin: 5px 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+button {
+  margin-top:20px;
+  padding: 10px;
+  background-color: #007bff;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
 .pr-10{
     padding-right:10px;
 }
@@ -12,4 +44,7 @@
 }
 .pr-20{
     padding-right:20px;
+}
+.center{
+    text-align:center;
 }
