--- a/gdprtestproject.client/src/app/Component/user/user.component.html
+++ b/gdprtestproject.client/src/app/Component/user/user.component.html
@@ -1,17 +1,30 @@
 <div class="profile-container">
-  <h2>User Profile</h2>
-
-  <!-- View Mode -->
+  <h2 class="center">User Profile</h2>
   <div *ngIf="!isEditing && userrequest">
-    <p><strong>First Name :</strong> {{ userrequest.FirstName }}</p>
-    <p><strong>Last Name:</strong> {{ userrequest.LastName }}</p>
-    <p><strong>Email:</strong> {{ userrequest.Email }}</p>
+    <div class="form-group">
+      <label for="FirstName" class="pr-10">First Name </label>
+      <input [(ngModel)]="userrequest.FirstName" name="FirstName" type="text" class="form-control pb-10" disabled required />
+    </div>
 
-    <button (click)="toggleEdit()">Update</button>
+    <div class="form-group">
+      <label for="LastName" class="pr-10">Last Name </label>
+      <input [(ngModel)]="userrequest.LastName" name="LastName" type="text" class="form-control pb-10" disabled required />
+    </div>
+
+    <div class="form-group">
+      <label for="Email" class="pr-10 pr">Email </label>
+      <input [(ngModel)]="userrequest.Email" name="Email" type="email" class="form-control  pb-10"  disabled required />
+    </div>
+
+    <div class="form-group">
+      <label for="Password" class="pr-10 pr-20">Password </label>
+      <input [(ngModel)]="userrequest.Password" name="Password" type="password" class="form-control pb-10 " disabled required />
+    </div>
+    <button (click)="toggleEdit()" class="mr-10">Update</button>
     <button class="btn btn-danger" (click)="deleteProfile()">Delete</button>
   </div>
 
-  <!-- Edit Mode -->
+
   <div *ngIf="isEditing && userrequest">
     <form (ngSubmit)="saveProfile()" #form="ngForm">
       <div class="form-group">
