--- a/gdprtestproject.client/src/app/Component/user/user.component.html
+++ b/gdprtestproject.client/src/app/Component/user/user.component.html
@@ -26,28 +26,40 @@
 
 
   <div *ngIf="isEditing && userrequest">
-    <form (ngSubmit)="saveProfile()" #form="ngForm">
+    <form (ngSubmit)="saveProfile()" #form="ngForm" novalidate>
       <div class="form-group">
         <label for="FirstName" class="pr-10">First Name </label>
-        <input [(ngModel)]="userrequest.FirstName" name="FirstName" type="text" class="form-control pb-10" required />
+        <input [(ngModel)]="userrequest.FirstName" name="FirstName" type="text" class="form-control pb-10" required #FirstName="ngModel" />
+        <div *ngIf="FirstName.invalid && FirstName.touched" class="text-danger clr-red">
+          First Name is required.
+        </div>
       </div>
 
       <div class="form-group">
         <label for="LastName" class="pr-10">Last Name </label>
-        <input [(ngModel)]="userrequest.LastName" name="LastName" type="text" class="form-control pb-10" required />
+        <input [(ngModel)]="userrequest.LastName" name="LastName" type="text" class="form-control pb-10" required #LastName="ngModel" />
+        <div *ngIf="LastName.invalid && LastName.touched" class="text-danger clr-red">
+          Last Name is required.
+        </div>
       </div>
 
       <div class="form-group">
         <label for="Email" class="pr-10 pr">Email </label>
-        <input [(ngModel)]="userrequest.Email" name="Email" type="email" class="form-control  pb-10" required />
+        <input [(ngModel)]="userrequest.Email" name="Email" type="email" class="form-control  pb-10" required #Email="ngModel" email />
+        <div *ngIf="Email.invalid && Email.touched" class="text-danger clr-red">
+          Valid Email is required.
+        </div>
       </div>
 
       <div class="form-group">
         <label for="Password" class="pr-10 pr-20">Password </label>
-        <input [(ngModel)]="userrequest.Password" name="Password" type="password" class="form-control pb-10 " required />
+        <input [(ngModel)]="userrequest.Password" name="Password" type="password" class="form-control pb-10 " required #Password="ngModel" />
+        <div *ngIf="Password.invalid && Password.touched" class="text-danger clr-red">
+          Password is required.
+        </div>
       </div>
 
-      <button type="submit" class="mr-10">Save</button>
+      <button type="submit" class="mr-10" [disabled]="form.invalid">Save</button>
       <button type="button" class="btn btn-secondary" (click)="toggleEdit()">Cancel</button>
     </form>
   </div>
